# manako_benchmark

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: cost_vs_accuracy.html  index.html  vehicle.html
manako_benchmark/: __init__.py  cli.py  config.py
manako_benchmark/data/: __init__.py  dataset.py
manako_benchmark/evaluation/: __init__.py  metrics.py  runner.py  temporal.py
manako_benchmark/models/: __init__.py  base.py  roboflow.py  sam3.py  sn44.py
manako_benchmark/reporting/: dashboard.py
reports/: benchmark_report.html  report_2026-04-08.html
